JM : updated path

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
       - ./config:/opt/config
       - ./repository:/opt/repository
       - ./logs:/opt/logs
+      - ./dataloc/:/usr/local/temp/
     restart: always
   aiv-ai: 
     container_name: aiv-ai
