--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     expose:
       - '${DB_PORT}:5432'
     environment:
-      POSTGRES_DB: jdbc:postgresql://db:5432/postgres
+      POSTGRES_DB: postgres
       POSTGRES_USER: ${AIV_DB_USER}
       POSTGRES_PASSWORD: ${AIV_DB_PASSWORD}
     volumes:
@@ -47,11 +47,6 @@ services:
       security_db_url: jdbc:postgresql://db:5432/postgres?currentSchema=security
       security_db_user: ${AIV_DB_USER}
       security_db_password: ${AIV_DB_PASSWORD}
-      jira_db_url: jdbc:postgresql://db:5432/jiraTest
-      jira_db_user: ${AIV_DB_USER}
-      jira_db_password: ${AIV_DB_PASSWORD}
-      addon_base_url: http://localhost:8080/aiv
-      atlassian_url: https://app.atlassian.net
     volumes:
       - ./config:/opt/config
       - ./repository:/opt/repository
