JM: Using init for startup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,8 @@ services:
   aiv: 
     container_name: aiv
     image: jits023/aiv:6.0.0
+    entrypoint: ["/opt/init.sh"]  # ENTRYPOINT is set here
+    command: []                   # CMD is set here (optional, to pass arguments)
     ports: 
       - "9090:8080"
     depends_on:
