--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,6 @@ services:
     container_name: aiv
     image: jits023/aiv:6.0.0
     entrypoint: ["/opt/init.sh"]  # ENTRYPOINT is set here
-    command: []                   # CMD is set here (optional, to pass arguments)
     ports: 
       - "9090:8080"
     depends_on:
@@ -54,7 +53,7 @@ services:
       - ./repository:/opt/repository
       - ./logs:/opt/logs
       - ./dataloc/:/usr/local/temp/
-    restart: always
+#    restart: always
   aiv-ai: 
     container_name: aiv-ai
     image: jits023/aiv-ai:6.0.0
