--- a/repository/econfig/application.yml
+++ b/repository/econfig/application.yml
@@ -49,12 +49,14 @@ app:
   slatKey: 0123456789abcdef
   ivspec: fedcba9876543210
   imgLocation: ${aiv_base}/repository/images/
+  appLocation: ${aiv_base}/repository/APP/
   repositoryLocation: ${aiv_base}/repository
   logDir: ${aiv_base}/logs
   deliveryLocation: ${aiv_base}/repository/delivery
   database: postgresql
   securityClass: com.security.services.SimpleAuthImpl #com.simple.services.SimpleAuthImpl/com.utility.JiraAuthImpl
   isJira: false
+  noofreports: 10
 
 #While creating Embed token
 # ekey -> Generating Embed Encrypted insternal token.
@@ -72,6 +74,8 @@ logging:
 aiv-internalToken: ActiveIntelligence
 management.metrics.mongo.command.enabled: false
 management.metrics.mongo.connectionpool.enabled: false
+
+jasper.connection: true,java:comp/env/jdbc/classicmodels
 # Default Jndi connnection Datasources
 # external.db.1: jdbc,mysql,ClassicModels,true,java:comp/env/jdbc/classicmodels
 #external.db.2: olap,SampleData,mondrian.olap4j.MondrianOlap4jDriver,jdbc:mondrian:DataSource,D:/Repositories/AIV/tomcat/data/sampledata.mondrian.xml,true,org.hsqldb.jdbcDriver,java:comp/env/jdbc/SampleData
