--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     image: jits023/aiv:6.1.0
     command: >
       /bin/bash -c '
-      if [ ! -f "/opt/config/application.yml" ]; then
-        echo "Error: application.yml not found at /opt/config/application.yml" && exit 1;
+      if [ ! -f "/opt/repository/econfig/application.yml" ]; then
+        echo "Error: application.yml not found at /opt/repository/econfig/application.yml" && exit 1;
       fi &&
       if [ -d "/opt/config/drivers" ]; then
         echo "Drivers directory found at /opt/config/drivers";
@@ -50,7 +50,7 @@ services:
       java --add-opens=java.base/java.nio=ALL-UNNAMED 
       --add-exports=java.base/sun.nio.ch=ALL-UNNAMED 
       --add-opens=java.base/sun.nio.ch=ALL-UNNAMED 
-      -Dspring.config.location=/opt/config/application.yml 
+      -Dspring.config.location=/opt/repository/econfig/application.yml 
       -Dloader.path=/opt/config/drivers 
       -cp /opt/repository/econfig/:run.jar 
       org.springframework.boot.loader.PropertiesLauncher'
