--- a/repository/econfig/user_default.properties
+++ b/repository/econfig/user_default.properties
@@ -14,6 +14,7 @@ admin_reportOption=2
 admin_requestOption=2
 admin_resourceOption=2
 admin_scheduleOption=2
+admin_webhookOption=2
 admin_userType=INT
 demo_adhocOption=2
 demo_adminOption=0
@@ -31,4 +32,5 @@ demo_reportOption=2
 demo_requestOption=2
 demo_resourceOption=2
 demo_scheduleOption=2
+demo_webhookOption=2
 demo_userType=INT
