--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       echo "Starting AIV application..." &&
       java --add-opens=java.base/java.nio=ALL-UNNAMED 
       --add-exports=java.base/sun.nio.ch=ALL-UNNAMED 
-      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED 
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED 
       -Dspring.config.location=/opt/repository/econfig/application.yml 
       -Dloader.path=/opt/config/drivers 
       -cp /opt/repository/econfig/:run.jar 
