--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       -Dspring.config.location=/opt/repository/econfig/application.yml 
       -Dloader.path=/opt/config/drivers 
       -cp /opt/repository/econfig/:run.jar 
-      org.springframework.boot.loader.PropertiesLauncher'
+      org.springframework.boot.loader.launch.PropertiesLauncher'
     ports: 
       - "8080:8080"
     depends_on:
