--- a/config/application.template
+++ b/config/application.template
@@ -33,6 +33,16 @@ spring:
    security:
      enabled: true
      change-log: classpath:db/changelog/db.changelog-security.sql
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: task-consumer-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: com.aiv.cluster.MapDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: com.aiv.cluster.MapSerializer
 
 # This is normal logging if we missed anything
 logging:
@@ -65,6 +75,15 @@ app:
   securityClass: com.security.services.SimpleAuthImpl #com.simple.services.SimpleAuthImpl/com.utility.JiraAuthImpl
   isJira: false
   noofreports: 10
+  task:
+    kafka:
+      retention.ms: 60000
+      topic:
+        topicName: task-topic       # Name of the Kafka topic
+        partitions: 2         # Number of partitions for the topic
+        replication-factor:  1
+    manager:
+      mode: single  # use "single" if you want to disable Kafka or multi
   logs:
     jsonlogs: false
     showdept: true
@@ -101,7 +120,5 @@ jira.type_database: postgresql
 jira.protocol: jdbc
 jiraAdminRoles: administrators,atlassian-addons-admin,site-admins,system-administrators
 
-general:
-  location: ${aiv_base}/repository/Econfig
 management.metrics.mongo.command.enabled: false
 management.metrics.mongo.connectionpool.enabled: false
