--- a/config/logback.template
+++ b/config/logback.template
@@ -44,7 +44,7 @@
 
     <appender name="CONSOLE" class="ch.qos.logback.core.ConsoleAppender">
         <layout class="ch.qos.logback.classic.PatternLayout">
-            <Pattern>%d %p %c{1.} [%t] %m%n</Pattern>
+            <Pattern>%d %p %c{1} [%t] %m%n</Pattern>
         </layout>
     </appender>
 
