--- a/repository/econfig/application.yml
+++ b/repository/econfig/application.yml
@@ -1,4 +1,8 @@
 server:
+  compression:
+    enabled: true
+    mime-types: application/json, text/html, text/xml, text/plain,text/css, text/javascript, application/javascript, application/octet-stream
+    min-response-size: 1024
   servlet:
     context-path: /aiv
   port: ${aiv_port}
