--- a/.github/workflows/build-deb-package.yml
+++ b/.github/workflows/build-deb-package.yml
@@ -3,6 +3,7 @@ name: Build Debian Package
 on:
   push:
     branches: [ debian/* ]
+    tags: [ 'debian/*' ]
   pull_request:
     branches: [ debian/* ]
 
@@ -25,10 +26,29 @@ jobs:
 
     - name: Rename package to debian 12 format
       run: |
-        mv aiv-build.deb aiv-build-deb12.deb
+        mv aiv-build.deb aiv-deb12.deb
+
+    - name: Rename package to debian 12 format and tag versionn if available
+      if: startsWith(github.ref, 'refs/tags/debian/')
+      env:
+        TAG: ${{ github.ref_name }}
+      run: |
+        # extract version from tag
+        VERSION=$(echo $TAG | sed 's/debian\///')
+        # rename package
+        mv aiv-deb12.deb avi-${VERSION}-deb12.deb
+        echo "Renamed package to avi-${VERSION}-deb12.deb"
+
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: aiv-build-package
-        path: aiv-build*.deb
+        path: aiv-deb12.deb
+
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: github.ref_type == 'tag'
+      with:
+        files: |
+          avi-*.deb
