--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,14 @@
-Package: aiv
-Version: 1.0.0
+Source: aiv
 Section: java
 Priority: optional
-Architecture: all
-Depends: openjdk-17-jdk-headless, ca-certificates
 Maintainer: Your Name <your.email@example.com>
+Build-Depends: debhelper-compat (= 13)
+Standards-Version: 4.5.1
+Homepage: https://example.com
+
+Package: aiv
+Architecture: all
+Depends: ${misc:Depends}, openjdk-17-jdk-headless, ca-certificates
 Description: AIV Spring Application
  Java Spring application for AIV system.
  This package includes the necessary components to run the AIV service.
