deb: change to dpkg-buildpackage

--- a/.github/workflows/build-deb-package.yml
+++ b/.github/workflows/build-deb-package.yml
@@ -19,25 +19,19 @@ jobs:
         docker rm -f aiv_container
 
     - name: Build debian package
-      run: bash aiv-build-deb.sh
-
-    - name: Rename package to debian 11,12 format and tag versionn if available
       if: startsWith(github.ref, 'refs/tags/debian/')
       env:
         TAG: ${{ github.ref_name }}
       run: |
-        # extract version from tag
         VERSION=$(echo $TAG | sed 's/debian\///')
-        # rename package
-        mv aiv-build.deb aiv-${VERSION}-deb11a12.deb
-        echo "Renamed package to aiv-${VERSION}-deb11a12.deb"
-
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: aiv-build-package
-        path: aiv-build.deb
+        echo "Building Debian package for version $VERSION"
+        # Run in docker container for debian:12 to ensure a clean environment
+        docker run --rm -e "VERSION=$VERSION" \
+          -v $PWD:/workspace \
+          -w /workspace \
+          debian:12 \
+          bash -c "apt-get update && apt-get install -y debhelper && \
+                   DEBUG=1 bash aiv-build-deb.sh"
 
     - name: Release
       uses: softprops/action-gh-release@v2
