--- a/aws-eks/eks-infrastructure.yaml
+++ b/aws-eks/eks-infrastructure.yaml
@@ -8,9 +8,8 @@ Parameters:
     Description: 'Name of the EKS cluster'
   
   KeyPairName:
-    Type: String
-    Default: 'eks-keypair'
-    Description: 'Name for the EC2 Key Pair'
+    Description: 'Name of an existing EC2 KeyPair to enable SSH access'
+    Type: 'AWS::EC2::KeyPair::KeyName'
   
   VpcCidr:
     Type: String
@@ -28,13 +27,6 @@ Parameters:
 
 
 Resources:
-  # Create EC2 Key Pair
-  EKSKeyPair:
-    Type: AWS::EC2::KeyPair
-    Properties:
-      KeyName: !Ref KeyPairName
-      KeyType: rsa
-      KeyFormat: pem
 
   # VPC
   VPC:
